tests/golden/openshift-rbac-proxy/thanos/thanos/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: syn-thanos
    openshift.io/cluster-monitoring: 'true'
  name: syn-thanos
