tests/golden/openshift-rbac-proxy/thanos/thanos/40_thanos_objstore.yaml
apiVersion: v1
data: {}
kind: Secret
metadata:
  annotations: {}
  labels:
    name: thanos-objectstorage
  name: thanos-objectstorage
  namespace: syn-thanos
stringData:
  thanos.yaml: |-
    "config":
      "access_key": "t-silent-test-1234/c-green-test-1234/thanos/access_key"
      "bucket": "thanos-metrics"
      "endpoint": "s3.example.com"
      "secret_key": "t-silent-test-1234/c-green-test-1234/thanos/secret_key"
    "type": "S3"
type: Opaque
