tests/golden/openshift-rbac-proxy/thanos/thanos/50_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  labels:
    name: thanos
  name: thanos
spec:
  rules:
    - host: thanos.example.com
      http:
        paths:
          - backend:
              service:
                name: thanos-auth
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - thanos.example.com
      secretName: thanos-tls
