tests/golden/openshift-rbac-proxy/thanos/thanos/51_auth-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    name: thanos-auth
  name: thanos-auth
spec:
  ports:
    - name: proxy
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/component: query-layer
    app.kubernetes.io/instance: thanos-query
    app.kubernetes.io/name: thanos-query
    app.kubernetes.io/version: v0.18.0
  type: ClusterIP
